assembler/lexer/masm/ast/MASMParser.cpp
 
#include <cstdio>
#include <cstdlib>
#include <vector>


// Generated from MASM.g4 by ANTLR 4.7


#include "MASMListener.h"

#include "MASMParser.h"


using namespace antlrcpp;
using namespace antlr4;

MASMParser::MASMParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MASMParser::~MASMParser() {
  delete _interpreter;
}

std::string MASMParser::getGrammarFileName() const {
  return "MASM.g4";
}

const std::vector<std::string>& MASMParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MASMParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

MASMParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MASMParser::CompilationUnitContext::Identifier() {
  return getToken(MASMParser::Identifier, 0);
}

std::vector<MASMParser::SegmentsContext *> MASMParser::CompilationUnitContext::segments() {
  return getRuleContexts<MASMParser::SegmentsContext>();
}

MASMParser::SegmentsContext* MASMParser::CompilationUnitContext::segments(size_t i) {
  return getRuleContext<MASMParser::SegmentsContext>(i);
}

std::vector<MASMParser::Directive_exp1Context *> MASMParser::CompilationUnitContext::directive_exp1() {
  return getRuleContexts<MASMParser::Directive_exp1Context>();
}

MASMParser::Directive_exp1Context* MASMParser::CompilationUnitContext::directive_exp1(size_t i) {
  return getRuleContext<MASMParser::Directive_exp1Context>(i);
}


size_t MASMParser::CompilationUnitContext::getRuleIndex() const {
  return MASMParser::RuleCompilationUnit;
}

void MASMParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void MASMParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}

MASMParser::CompilationUnitContext* MASMParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, MASMParser::RuleCompilationUnit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MASMParser::Identifier || ((((_la - 217) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 217)) & ((1ULL << (MASMParser::ALPHA - 217))
      | (1ULL << (MASMParser::CONST - 217))
      | (1ULL << (MASMParser::CREF - 217))
      | (1ULL << (MASMParser::XCREF - 217))
      | (1ULL << (MASMParser::DATA - 217))
      | (1ULL << (MASMParser::DATA2 - 217))
      | (1ULL << (MASMParser::DOSSEG - 217))
      | (1ULL << (MASMParser::ERR - 217))
      | (1ULL << (MASMParser::ERR1 - 217))
      | (1ULL << (MASMParser::ERR2 - 217))
      | (1ULL << (MASMParser::ERRE - 217))
      | (1ULL << (MASMParser::ERRNZ - 217))
      | (1ULL << (MASMParser::ERRDEF - 217))
      | (1ULL << (MASMParser::ERRNDEF - 217))
      | (1ULL << (MASMParser::ERRB - 217))
      | (1ULL << (MASMParser::ERRNB - 217))
      | (1ULL << (MASMParser::ERRIDN - 217))
      | (1ULL << (MASMParser::ERRDIF - 217))
      | (1ULL << (MASMParser::EVEN - 217))
      | (1ULL << (MASMParser::LIST - 217))
      | (1ULL << (MASMParser::WIDTH - 217))
      | (1ULL << (MASMParser::MASK - 217))
      | (1ULL << (MASMParser::SEQ - 217))
      | (1ULL << (MASMParser::XLIST - 217))
      | (1ULL << (MASMParser::EXIT - 217))
      | (1ULL << (MASMParser::MODEL - 217)))) != 0)) {
      setState(100);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case MASMParser::Identifier: {
          setState(98);
          segments();
          break;
        }

        case MASMParser::ALPHA:
        case MASMParser::CONST:
        case MASMParser::CREF:
        case MASMParser::XCREF:
        case MASMParser::DATA:
        case MASMParser::DATA2:
        case MASMParser::DOSSEG:
        case MASMParser::ERR:
        case MASMParser::ERR1:
        case MASMParser::ERR2:
        case MASMParser::ERRE:
        case MASMParser::ERRNZ:
        case MASMParser::ERRDEF:
        case MASMParser::ERRNDEF:
        case MASMParser::ERRB:
        case MASMParser::ERRNB:
        case MASMParser::ERRIDN:
        case MASMParser::ERRDIF:
        case MASMParser::EVEN:
        case MASMParser::LIST:
        case MASMParser::WIDTH:
        case MASMParser::MASK:
        case MASMParser::SEQ:
        case MASMParser::XLIST:
        case MASMParser::EXIT:
        case MASMParser::MODEL: {
          setState(99);
          directive_exp1();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(105);
    match(MASMParser::T__0);
    setState(106);
    match(MASMParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SegmentsContext ------------------------------------------------------------------

MASMParser::SegmentsContext::SegmentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MASMParser::SegmentsContext::Identifier() {
  return getTokens(MASMParser::Identifier);
}

tree::TerminalNode* MASMParser::SegmentsContext::Identifier(size_t i) {
  return getToken(MASMParser::Identifier, i);
}

std::vector<MASMParser::CodeContext *> MASMParser::SegmentsContext::code() {
  return getRuleContexts<MASMParser::CodeContext>();
}

MASMParser::CodeContext* MASMParser::SegmentsContext::code(size_t i) {
  return getRuleContext<MASMParser::CodeContext>(i);
}

std::vector<MASMParser::ProcContext *> MASMParser::SegmentsContext::proc() {
  return getRuleContexts<MASMParser::ProcContext>();
}

MASMParser::ProcContext* MASMParser::SegmentsContext::proc(size_t i) {
  return getRuleContext<MASMParser::ProcContext>(i);
}


size_t MASMParser::SegmentsContext::getRuleIndex() const {
  return MASMParser::RuleSegments;
}

void MASMParser::SegmentsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSegments(this);
}

void MASMParser::SegmentsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSegments(this);
}

MASMParser::SegmentsContext* MASMParser::segments() {
  SegmentsContext *_localctx = _tracker.createInstance<SegmentsContext>(_ctx, getState());
  enterRule(_localctx, 2, MASMParser::RuleSegments);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(MASMParser::Identifier);
    setState(109);
    match(MASMParser::T__1);
    setState(110);
    match(MASMParser::T__2);
    setState(111);
    match(MASMParser::T__3);
    setState(116);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(114);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          setState(112);
          code();
          break;
        }

        case 2: {
          setState(113);
          proc();
          break;
        }

        } 
      }
      setState(118);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
    setState(119);
    match(MASMParser::Identifier);
    setState(120);
    match(MASMParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcContext ------------------------------------------------------------------

MASMParser::ProcContext::ProcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MASMParser::ProcContext::Identifier() {
  return getTokens(MASMParser::Identifier);
}

tree::TerminalNode* MASMParser::ProcContext::Identifier(size_t i) {
  return getToken(MASMParser::Identifier, i);
}

std::vector<MASMParser::CodeContext *> MASMParser::ProcContext::code() {
  return getRuleContexts<MASMParser::CodeContext>();
}

MASMParser::CodeContext* MASMParser::ProcContext::code(size_t i) {
  return getRuleContext<MASMParser::CodeContext>(i);
}


size_t MASMParser::ProcContext::getRuleIndex() const {
  return MASMParser::RuleProc;
}

void MASMParser::ProcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProc(this);
}

void MASMParser::ProcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProc(this);
}

MASMParser::ProcContext* MASMParser::proc() {
  ProcContext *_localctx = _tracker.createInstance<ProcContext>(_ctx, getState());
  enterRule(_localctx, 4, MASMParser::RuleProc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(MASMParser::Identifier);
    setState(123);
    match(MASMParser::PROC);
    setState(127);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(124);
        code(); 
      }
      setState(129);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(130);
    match(MASMParser::RET);
    setState(131);
    match(MASMParser::Identifier);
    setState(132);
    match(MASMParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeContext ------------------------------------------------------------------

MASMParser::CodeContext::CodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MASMParser::Binary_exp1Context* MASMParser::CodeContext::binary_exp1() {
  return getRuleContext<MASMParser::Binary_exp1Context>(0);
}

MASMParser::Binary_exp10Context* MASMParser::CodeContext::binary_exp10() {
  return getRuleContext<MASMParser::Binary_exp10Context>(0);
}

MASMParser::Binary_exp11Context* MASMParser::CodeContext::binary_exp11() {
  return getRuleContext<MASMParser::Binary_exp11Context>(0);
}

MASMParser::Binary_exp12Context* MASMParser::CodeContext::binary_exp12() {
  return getRuleContext<MASMParser::Binary_exp12Context>(0);
}

MASMParser::Binary_exp2Context* MASMParser::CodeContext::binary_exp2() {
  return getRuleContext<MASMParser::Binary_exp2Context>(0);
}

MASMParser::Binary_exp3Context* MASMParser::CodeContext::binary_exp3() {
  return getRuleContext<MASMParser::Binary_exp3Context>(0);
}

MASMParser::Binary_exp4Context* MASMParser::CodeContext::binary_exp4() {
  return getRuleContext<MASMParser::Binary_exp4Context>(0);
}

MASMParser::Binary_exp5Context* MASMParser::CodeContext::binary_exp5() {
  return getRuleContext<MASMParser::Binary_exp5Context>(0);
}

MASMParser::Binary_exp6Context* MASMParser::CodeContext::binary_exp6() {
  return getRuleContext<MASMParser::Binary_exp6Context>(0);
}

MASMParser::Binary_exp7Context* MASMParser::CodeContext::binary_exp7() {
  return getRuleContext<MASMParser::Binary_exp7Context>(0);
}

MASMParser::Binary_exp8Context* MASMParser::CodeContext::binary_exp8() {
  return getRuleContext<MASMParser::Binary_exp8Context>(0);
}

MASMParser::Binary_exp9Context* MASMParser::CodeContext::binary_exp9() {
  return getRuleContext<MASMParser::Binary_exp9Context>(0);
}

MASMParser::Unuary_exp1Context* MASMParser::CodeContext::unuary_exp1() {
  return getRuleContext<MASMParser::Unuary_exp1Context>(0);
}

MASMParser::Unuary_exp2Context* MASMParser::CodeContext::unuary_exp2() {
  return getRuleContext<MASMParser::Unuary_exp2Context>(0);
}

MASMParser::Unuary_exp3Context* MASMParser::CodeContext::unuary_exp3() {
  return getRuleContext<MASMParser::Unuary_exp3Context>(0);
}

MASMParser::Unuary_exp4Context* MASMParser::CodeContext::unuary_exp4() {
  return getRuleContext<MASMParser::Unuary_exp4Context>(0);
}

MASMParser::Unuary_exp5Context* MASMParser::CodeContext::unuary_exp5() {
  return getRuleContext<MASMParser::Unuary_exp5Context>(0);
}

MASMParser::NotargumentsContext* MASMParser::CodeContext::notarguments() {
  return getRuleContext<MASMParser::NotargumentsContext>(0);
}

MASMParser::VariabledeclarationContext* MASMParser::CodeContext::variabledeclaration() {
  return getRuleContext<MASMParser::VariabledeclarationContext>(0);
}

MASMParser::Directive_exp1Context* MASMParser::CodeContext::directive_exp1() {
  return getRuleContext<MASMParser::Directive_exp1Context>(0);
}


size_t MASMParser::CodeContext::getRuleIndex() const {
  return MASMParser::RuleCode;
}

void MASMParser::CodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCode(this);
}

void MASMParser::CodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCode(this);
}

MASMParser::CodeContext* MASMParser::code() {
  CodeContext *_localctx = _tracker.createInstance<CodeContext>(_ctx, getState());
  enterRule(_localctx, 6, MASMParser::RuleCode);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(154);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MASMParser::MOV:
      case MASMParser::CMP:
      case MASMParser::TEST: {
        enterOuterAlt(_localctx, 1);
        setState(134);
        binary_exp1();
        break;
      }

      case MASMParser::IN: {
        enterOuterAlt(_localctx, 2);
        setState(135);
        binary_exp10();
        break;
      }

      case MASMParser::OUT: {
        enterOuterAlt(_localctx, 3);
        setState(136);
        binary_exp11();
        break;
      }

      case MASMParser::REP:
      case MASMParser::REPE:
      case MASMParser::REPZ:
      case MASMParser::REPNE:
      case MASMParser::REPNZ: {
        enterOuterAlt(_localctx, 4);
        setState(137);
        binary_exp12();
        break;
      }

      case MASMParser::XCHG: {
        enterOuterAlt(_localctx, 5);
        setState(138);
        binary_exp2();
        break;
      }
